--- a/CNN/CNN.BL/CNN.BL.csproj
+++ b/CNN/CNN.BL/CNN.BL.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants\ConsoleMessageConstants.cs" />
+    <Compile Include="Constants\FileConstants.cs" />
+    <Compile Include="Constants\MatrixConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ImageConverterUtil.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
