--- a/CNN/CNN.BL/CNN.BL.csproj
+++ b/CNN/CNN.BL/CNN.BL.csproj
@@ -44,11 +44,15 @@
     <Compile Include="Constants\ConsoleMessageConstants.cs" />
     <Compile Include="Constants\FileConstants.cs" />
     <Compile Include="Constants\MatrixConstants.cs" />
+    <Compile Include="Helpers\PathHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ImageConverterUtil.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <Content Include="Resources\1.bmp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
