--- a/CNN/CNN.Core/CNN.Core.csproj
+++ b/CNN/CNN.Core/CNN.Core.csproj
@@ -40,7 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConvolutionalLayer.cs" />
     <Compile Include="FilterCore.cs" />
+    <Compile Include="InputLayer.cs" />
+    <Compile Include="Neuron.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
