--- a/CNN/CNN.Core/CNN.Core.csproj
+++ b/CNN/CNN.Core/CNN.Core.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Layers\ConvolutionalLayer.cs" />
+    <Compile Include="Layers\HiddenLayer.cs" />
     <Compile Include="Models\FilterCoreModel.cs" />
     <Compile Include="Layers\InputLayer.cs" />
     <Compile Include="Models\NeuronModel.cs" />
