--- a/CNN/CNN.BL/CNN.BL.csproj
+++ b/CNN/CNN.BL/CNN.BL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Constants\ConsoleMessageConstants.cs" />
     <Compile Include="Constants\FileConstants.cs" />
     <Compile Include="Constants\MatrixConstants.cs" />
+    <Compile Include="Enums\LayerType.cs" />
     <Compile Include="Helpers\PathHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ImageConverterUtil.cs" />
