--- a/CNN/CNN.Core/CNN.Core.csproj
+++ b/CNN/CNN.Core/CNN.Core.csproj
@@ -40,13 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration.cs" />
     <Compile Include="Layers\ConvolutionalLayer.cs" />
     <Compile Include="Layers\HiddenLayer.cs" />
+    <Compile Include="Layers\Layer.cs" />
     <Compile Include="Layers\OutputLayer.cs" />
     <Compile Include="Models\FilterCoreModel.cs" />
     <Compile Include="Layers\InputLayer.cs" />
     <Compile Include="Models\NeuronModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\LearningUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CNN.BL\CNN.BL.csproj">
