--- a/CNN/CNN.BL/CNN.BL.csproj
+++ b/CNN/CNN.BL/CNN.BL.csproj
@@ -42,18 +42,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants\ConsoleMessageConstants.cs" />
+    <Compile Include="Constants\DialogConstants.cs" />
     <Compile Include="Constants\FileConstants.cs" />
+    <Compile Include="Constants\LayersConstants.cs" />
     <Compile Include="Constants\MatrixConstants.cs" />
     <Compile Include="Enums\LayerType.cs" />
     <Compile Include="Helpers\PathHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ImageConverterUtil.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="Resources\1.bmp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Resources\1%280%29.bmp" />
+    <Content Include="Resources\1%281%29.bmp" />
+    <Content Include="Resources\1%282%29.bmp" />
+    <Content Include="Resources\1%283%29.bmp" />
+    <Content Include="Resources\1%284%29.bmp" />
+    <Content Include="Resources\1%285%29.bmp" />
+    <Content Include="Resources\1%286%29.bmp" />
+    <Content Include="Resources\1%287%29.bmp" />
+    <Content Include="Resources\1%288%29.bmp" />
+    <Content Include="Resources\1%289%29.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
