--- a/CNN/CNN.Core/CNN.Core.csproj
+++ b/CNN/CNN.Core/CNN.Core.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Models\NeuronModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\LearningUtil.cs" />
+    <Compile Include="Utils\WeightSaveUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CNN.BL\CNN.BL.csproj">
