--- a/CNN/CNN.BL/CNN.BL.csproj
+++ b/CNN/CNN.BL/CNN.BL.csproj
@@ -47,9 +47,11 @@
     <Compile Include="Constants\LayersConstants.cs" />
     <Compile Include="Constants\MatrixConstants.cs" />
     <Compile Include="Enums\LayerType.cs" />
+    <Compile Include="Enums\WeightsType.cs" />
     <Compile Include="Helpers\PathHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ImageConverterUtil.cs" />
+    <Compile Include="Utils\WeightLoadUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\1%280%29.bmp" />
