--- a/CNN/CNN.BL/CNN.BL.csproj
+++ b/CNN/CNN.BL/CNN.BL.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Constants\MatrixConstants.cs" />
     <Compile Include="Enums\LayerType.cs" />
     <Compile Include="Enums\WeightsType.cs" />
+    <Compile Include="Helpers\ErrorHelper.cs" />
     <Compile Include="Helpers\PathHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ImageConverterUtil.cs" />
